--- a/how_to_classic-limit.ipynb
+++ b/how_to_classic-limit.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +29,13 @@
     "dt = 1e-3\n",
     "activation = 'erf'\n",
     "\n",
-    "store_path = f'computation-database/classic-limit/{activation}'\n",
+    "store_path = f'computation-database/classic-limit/{activation}/'\n",
     "ic_string = 'classic-limit'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,21 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 621.93it/s]\n",
-      "100%|██████████| 9/9 [00:00<00:00, 1541.08it/s]\n",
-      "100%|██████████| 90/90 [00:00<00:00, 2236.98it/s]\n",
-      "100%|██████████| 900/900 [00:00<00:00, 2995.25it/s]\n",
-      "100%|██████████| 9000/9000 [00:03<00:00, 2845.71it/s]\n",
-      "100%|██████████| 90000/90000 [00:28<00:00, 3175.87it/s]\n",
-      "100%|██████████| 900000/900000 [04:51<00:00, 3089.28it/s]\n",
-      "100%|██████████| 5000000/5000000 [27:25<00:00, 3038.92it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 20.64it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 878.74it/s]\n",
+      "100%|██████████| 90/90 [00:00<00:00, 1719.60it/s]\n",
+      "100%|██████████| 900/900 [00:00<00:00, 2605.83it/s]\n",
+      "100%|██████████| 9000/9000 [00:03<00:00, 2597.12it/s]\n",
+      " 46%|████▌     | 40993/90000 [00:14<00:16, 3008.23it/s]"
      ]
     }
    ],
@@ -105,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
